# fastMock

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deploy-local.bat  deploy.bat  deploy.sh
deploy/: Dockerfile  deployment.yaml  headless-service.yaml  service.yaml
src/: main.rs  metrics.rs  models.rs  routes.rs  state.rs  utils.rs
src/static/: index.html
static/: 404.html  index.html
